<?xml version="1.0"?>
<package>
  <name>rsj_robot_test</name>
  <version>0.1.0</version>
  <description>Robot control test</description>

  <maintainer email="5770105+KMiyawaki@users.noreply.github.com">Kenzaburo Miyawaki</maintainer>
  <license>BSD</license>
  <author email="5770105+KMiyawaki@users.noreply.github.com">Kenzaburo Miyawaki</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend> <!--餈質-->
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend> <!--餈質-->
</package>
